removed a couple lines of junk from build file, corrected swig override variable

--- a/custom.py.example
+++ b/custom.py.example
@@ -1,4 +1,4 @@
-# SWIG_PATH = "/usr/bin/swig"
+# LOCAL_SWIG = "/usr/bin/swig"
 # CXX = "/usr/bin/g++"
 # PYTHON_PATH = "/usr/include/python2.7"
 # BOOST_INCLUDE
